--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@ html, body { height: 100%; } /* The html and body elements cannot have any paddi
 	height: auto !important;
 	height: 100%;
 	margin: 0 auto -60px; /* Negative indent footer by its height */
-	/*padding: 0 0 60px;  Pad bottom by footer height */
+	padding: 0 0 60px; /* Pad bottom by footer height */
 }
 #footer { /* Set the fixed height of the footer here */
 	height: 60px;
