--- a/css.css
+++ b/css.css
@@ -8,9 +8,10 @@ html, body { height: 100%; } /* The html and body elements cannot have any paddi
 	margin: 0 auto -60px; /* Negative indent footer by its height */
 	padding: 0 0 60px; /* Pad bottom by footer height */
 }
-#footer { /* Set the fixed height of the footer here */
-	height: 60px;
-	background-color: #f5f5f5;
+#footer { 
+	height: 60px; /* Set the fixed height of the footer here */
+	border-radius: 0;
+	margin-bottom: 0;
 }
 
 /* Custom page CSS
@@ -40,9 +41,7 @@ img.pull-right { padding: 0; margin: 0 0 1em 1em; }
 	bottom: -100%;
 	margin: auto;
 }
-.social {
-	margin-top: 16px;
-}
+.social { margin-top: 16px; }
 .social a {
 	line-height: 0;
 	font-size: 30px;
