--- a/css.css
+++ b/css.css
@@ -77,3 +77,18 @@ img.pull-right { padding: 0; margin: 0 0 1em 1em; }
 textarea.text-auto-scale {
 	resize: none;
 }
+
+
+.img-loader {
+	position: relative;
+}
+.img-loader .spinner {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 2;
+	height: 15px;
+	width: 128px;
+	margin: -7px -64px;
+	display: none;
+}
