--- a/css.css
+++ b/css.css
@@ -17,7 +17,9 @@ html, body { height: 100%; } /* The html and body elements cannot have any paddi
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
-#wrap > .container {
+#wrap > .color { min-height: 100%; }
+#wrap > .color-1 { background-color: #F0F0F0; }
+#wrap > .color > .container {
 	padding: 60px 15px 0;
 	min-height: 100%;
 }
