--- a/css.css
+++ b/css.css
@@ -17,11 +17,13 @@ html, body { height: 100%; } /* The html and body elements cannot have any paddi
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
-#wrap > .color { min-height: 100%; }
+/*#wrap > .color { min-height: 100%; }*/
 #wrap > .color-2 { background-color: #F0F0F0; }
-#wrap > .color > .container {
-	padding: 60px 15px 0;
+#wrap > .color > .container { padding: 60px 15px; }
+#wrap > .color:last-child { min-height: 100%; }
+#wrap > .color:last-child > .container { 
 	min-height: 100%;
+	margin-bottom: 60px;
 }
 .container .credit { margin: 20px 0; }
 #footer > .container { padding-left: 15px; padding-right: 15px; }
