--- a/css.css
+++ b/css.css
@@ -32,7 +32,8 @@ code { font-size: 80%; }
 /* Nate page CSS
 -------------------------------------------------- */
 /*#wrap > .container { min-height: 600px; }*/
-.page-header > h1 { font-size: 30px; }
+.page-header > h1 { font-size: 24px; }
+.lead { font-size: 18px; }
 img.pull-right { padding: 0; margin: 0 0 1em 1em; }
 .center-cropped {
 	width: 75px;
